[package]
name = "k8s_manager"
version = "0.1.0"
edition = "2021"
default-run = "k8s-manager"

[[bin]]
name = "k8s-manager"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# System utilities
which = "5.0"
dirs = "5.0"

# Process execution
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
toml = "0.8"

# Base64 encoding/decoding
base64 = "0.21"

# Temporary files
tempfile = "3.8"

[features]
integration_tests = []
bench = []

[dev-dependencies]
