[package]
name = "templatizer-puppeteer"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Generate production-ready web scrapers for Airflow/K8s using Tera templates"
license = "MIT"

[dependencies]
tera = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "templatizer-puppeteer"
path = "src/main.rs"
