[package]
name = "templatizer-spark"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Generate Spark applications for Scala and Python using Tera templates"
license = ""

[dependencies]
tera = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
rust-embed = { version = "8.0", features = ["include-exclude"] }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "templatizer-spark"
path = "src/main.rs"
