[package]
name = "templatizer-superset"
version = "0.1.0"
edition = "2024"
authors = ["Cogent Creation Co"]
description = "Elegant Superset dashboard generator from JSON configurations"
license = ""
repository = ""
keywords = ["superset", "dashboard", "visualization", "postgresql", "analytics"]
categories = ["visualization", "api-bindings", "database"]
readme = "README.md"

[[bin]]
name = "superset-gen"
path = "src/bin/superset-gen.rs"

[[example]]
name = "generate"
path = "examples/generate.rs"

[[example]]
name = "api_server"
path = "examples/api_server.rs"

[[example]]
name = "programmatic"
path = "examples/programmatic.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tera = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
tokio = { workspace = true }
zip = "0.6"
tempfile = { workspace = true }
lazy_static = "1.4"
regex = { workspace = true }
base64 = "0.21"
url = "2"
dotenv = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
md5 = "0.7"
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
